@@ -2,6 +2,7 @@
   * Use a clone instead of the main image in coders/png.c, so the image
     can still be used later on without being affected by changes made by
     the PNG encoder.
+  * Added PNG:exclude-chunk and PNG:include-chunk defines.
 
 2010-12-21  6.6.6-7 Anthony Thyssen <A.Thyssen@griffith...>
   * Removed the forced interpolation setting in AcquireResampleFilterThreadSet
